--- a/mods/sovra/rules/ships.yaml
+++ b/mods/sovra/rules/ships.yaml
@@ -72,7 +72,7 @@ SS:
 
 MSUB:
 	Inherits: ^Submarine
-	Inherits@AUTOTARGET: ^AutoTargetAllAssaultMove
+	Inherits@AUTOTARGET: ^AutoTargetGroundAssaultMove
 	HitShape:
 		TargetableOffsets: 576,0,0, -576,0,0
 		Type: Capsule
@@ -86,7 +86,7 @@ MSUB:
 		BuildAtProductionType: Submarine
 		BuildPaletteOrder: 60
 		Prerequisites: ~spen, stek, ~techlevel.high
-		Description: Submerged anti-ground siege unit\nwith anti-air capabilities.\nCan detect other submarines.\n\n  Strong vs Buildings, Ground units, Aircraft\n  Weak vs Naval units
+		Description: Submerged anti-ground siege unit.\nCan detect other submarines.\n\n  Strong vs Buildings, Ground units, Aircraft\n  Weak vs Naval units
 	Valued:
 		Cost: 1650
 	Tooltip:
@@ -110,10 +110,6 @@ MSUB:
 		CloakDelay: 100
 	Armament@PRIMARY:
 		Weapon: SubMissile
-		LocalOffset: 0,-171,0, 0,171,0
-		FireDelay: 2
-	Armament@SECONDARY:
-		Weapon: SubMissileAA
 		LocalOffset: 0,-171,0, 0,171,0
 		FireDelay: 2
 	AttackFrontal:
