No Husk blocking on Ref and SD
Vehicles that can spawn a husk when they got destroyed on a Ore Refinery or Service Depot will not spawn a husk.
This is to ensure those two structures cannot be blocked using vehicle husks.

also fixed fake ore refinery not being infilrateable by Thief.

--- a/mods/sovra/rules/structures.yaml
+++ b/mods/sovra/rules/structures.yaml
@@ -1565,6 +1565,10 @@ PROC:
 		RequiresSelection: true
 		PipCount: 17
 		FullSequence: pip-yellow
+	ProximityExternalCondition@REFDOCK:
+		Condition: onref
+		Range: 1c512
+		ValidRelationships: Ally, Neutral, Enemy
 
 SILO:
 	Inherits: ^Building
@@ -2411,6 +2415,10 @@ FIX:
 	WithDeathAnimation:
 		DeathSequence: dead
 		UseDeathTypeSuffix: false
+	ProximityExternalCondition@REFDOCK:
+		Condition: onref
+		Range: 1c512
+		ValidRelationships: Ally, Neutral, Enemy
 
 SBAG:
 	Inherits: ^Wall
@@ -2687,6 +2695,10 @@ ERCC:
 		RequiresSelection: true
 		PipCount: 17
 		FullSequence: pip-yellow
+	ProximityExternalCondition@REFDOCK:
+		Condition: onref
+		Range: 1c512
+		ValidRelationships: Ally, Neutral, Enemy
 
 HGAT:
 	Inherits: ^Gate
