--- a/mods/sovra/rules/fakes.yaml
+++ b/mods/sovra/rules/fakes.yaml
@@ -151,6 +151,19 @@ PROF:
 		Image: PROC
 	Valued:
 		Cost: 375
+	ProximityExternalCondition@REFDOCK:
+		Condition: onref
+		Range: 1c512
+		ValidRelationships: Ally, Neutral, Enemy
+	Targetable:
+		TargetTypes: GroundActor, Structure, C4, DetonateAttack, SpyInfiltrate, ThiefInfiltrate
+	InfiltrateForDecoration:
+		Types: SpyInfiltrate, ThiefInfiltrate
+		Position: Top
+		Margin: 0, 4
+		RequiresSelection: true
+		Image: pips
+		Sequence: tag-fake
 
 SYRF:
 	Inherits: ^FakeBuilding
@@ -345,6 +358,10 @@ FIXF:
 		TargetableOffsets: 840,0,0, 598,-640,0, 598,640,0, -1060,0,0, -768,-640,0, -768,640,0
 		Type: Polygon
 			Points: -1536,-300, -640,-811, 640,-811, 1536,-300, 1536,555, 640,1110, -640,1110, -1536,555
+	ProximityExternalCondition@REFDOCK:
+		Condition: onref
+		Range: 1c512
+		ValidRelationships: Ally, Neutral, Enemy
 
 HPAF:
 	Inherits: ^FakeBuilding
@@ -697,3 +714,16 @@ FRCC:
 	WithIdleOverlay@TOP:
 		RequiresCondition: !build-incomplete
 		Sequence: idle-top
+	ProximityExternalCondition@REFDOCK:
+		Condition: onref
+		Range: 1c512
+		ValidRelationships: Ally, Neutral, Enemy
+	Targetable:
+		TargetTypes: GroundActor, Structure, C4, DetonateAttack, SpyInfiltrate, ThiefInfiltrate
+	InfiltrateForDecoration:
+		Types: SpyInfiltrate, ThiefInfiltrate
+		Position: Top
+		Margin: 0, 4
+		RequiresSelection: true
+		Image: pips
+		Sequence: tag-fake
