--- a/mods/sovra/rules/infantry.yaml
+++ b/mods/sovra/rules/infantry.yaml
@@ -106,10 +106,10 @@ E1:
 		Palette: player-noshadow
 		IsPlayerPalette: true
 	ProducibleWithLevel:
-		Prerequisites: barracks.upgraded
+		Prerequisites: infantry.upgraded
 	WithProductionIconOverlay:
 		Types: Veterancy
-		Prerequisites: barracks.upgraded
+		Prerequisites: infantry.upgraded
 
 E1R1:
 	Inherits: E1
@@ -169,10 +169,10 @@ E2:
 		EmptyWeapon: UnitExplodeSmall
 		DamageSource: Killer
 	ProducibleWithLevel:
-		Prerequisites: barracks.upgraded
+		Prerequisites: infantry.upgraded
 	WithProductionIconOverlay:
 		Types: Veterancy
-		Prerequisites: barracks.upgraded
+		Prerequisites: infantry.upgraded
 
 E3:
 	Inherits: ^Soldier
@@ -220,12 +220,12 @@ E3:
 		Palette: player-noshadow
 		IsPlayerPalette: true
 	ProducibleWithLevel:
-		Prerequisites: barracks.upgraded
+		Prerequisites: infantry.upgraded
 	AutoTarget:
 		ScanRadius: 5
 	WithProductionIconOverlay:
 		Types: Veterancy
-		Prerequisites: barracks.upgraded
+		Prerequisites: infantry.upgraded
 
 E3R1:
 	Inherits: E3
@@ -285,10 +285,10 @@ E4:
 		Palette: player-noshadow
 		IsPlayerPalette: true
 	ProducibleWithLevel:
-		Prerequisites: barracks.upgraded
+		Prerequisites: infantry.upgraded
 	WithProductionIconOverlay:
 		Types: Veterancy
-		Prerequisites: barracks.upgraded
+		Prerequisites: infantry.upgraded
 
 E6:
 	Inherits: ^Soldier
@@ -482,10 +482,10 @@ E7:
 	Voiced:
 		VoiceSet: TanyaVoice
 	ProducibleWithLevel:
-		Prerequisites: barracks.upgraded
+		Prerequisites: infantry.upgraded
 	WithProductionIconOverlay:
 		Types: Veterancy
-		Prerequisites: barracks.upgraded
+		Prerequisites: infantry.upgraded
 
 MEDI:
 	Inherits: ^Soldier
@@ -764,10 +764,10 @@ SHOK:
 	Voiced:
 		VoiceSet: ShokVoice
 	ProducibleWithLevel:
-		Prerequisites: barracks.upgraded
+		Prerequisites: infantry.upgraded
 	WithProductionIconOverlay:
 		Types: Veterancy
-		Prerequisites: barracks.upgraded
+		Prerequisites: infantry.upgraded
 
 Zombie:
 	Inherits: ^Soldier
@@ -961,10 +961,10 @@ VOLK:
 	Voiced:
 		VoiceSet: VolkovVoice
 	ProducibleWithLevel:
-		Prerequisites: barracks.upgraded
+		Prerequisites: infantry.upgraded
 	WithProductionIconOverlay:
 		Types: Veterancy
-		Prerequisites: barracks.upgraded
+		Prerequisites: infantry.upgraded
     RenderSprites:
         Image: GNRL
 
@@ -1021,10 +1021,10 @@ E8:
 		RequiresCondition: !parachute
 		TargetTypes: GroundActor, Infantry, Disguise, FireImmune
 	ProducibleWithLevel:
-		Prerequisites: barracks.upgraded
+		Prerequisites: infantry.upgraded
 	WithProductionIconOverlay:
 		Types: Veterancy
-		Prerequisites: barracks.upgraded
+		Prerequisites: infantry.upgraded
 	Explodes:
 		Weapon: VisualExplode
 		EmptyWeapon: VisualExplode
@@ -1084,7 +1084,7 @@ SNIP:
 		ValidDamageStates: Critical
 	-MustBeDestroyed:
 	ProducibleWithLevel:
-		Prerequisites: barracks.upgraded
+		Prerequisites: infantry.upgraded
 	WithProductionIconOverlay:
 		Types: Veterancy
-		Prerequisites: barracks.upgraded
+		Prerequisites: infantry.upgraded
