Spy into Tech Center unlock new unit
Spy can infiltrate any Tech Center to unlock Tank Destroyer for production.

--- a/mods/sovra/rules/fakes.yaml
+++ b/mods/sovra/rules/fakes.yaml
@@ -500,6 +500,7 @@ ATEF:
 
 STEF:
 	Inherits: ^FakeBuilding
+	Inherits@infiltrate: ^InfiltratableFake
 	Inherits@shape: ^3x2Shape
 	HitShape:
 		TargetableOffsets: 420,-768,0, 420,768,0, -770,-768,0, -770,768,0
