--- a/mods/sovra/rules/structures.yaml
+++ b/mods/sovra/rules/structures.yaml
@@ -1883,7 +1883,7 @@ AFLD:
 		Icon: airdrop
 		ChargeInterval: 7500
 		Name: Air Drop
-		Description: A Badger drops a pair of Heavy Tanks\nanywhere on the map.
+		Description: A Badger drops a pair of Heavy Tanks\nat the selected location.
 		DropItems: 3TNKR1,3TNKR1
 		ReinforcementsArrivedSpeechNotification: ReinforcementsArrived
 		SelectTargetSpeechNotification: SelectTarget
