Submarine sprite fix attempt
attempt to bake turret into the sprite for Submarine to prevent weird dislodging at some angles.
given Submarine Grenade launcher weapon a different sound.

bonus: allow Soviet factions to get a Mammoth from crates.

--- a/mods/sovra/rules/misc.yaml
+++ b/mods/sovra/rules/misc.yaml
@@ -95,6 +95,11 @@ CRATE:
 		Units: 3tnk
 		ValidFactions: soviet, russia, ukraine, belarus
 		Prerequisites: techlevel.medium, fix
+	GiveUnitCrateAction@4tnk:
+		SelectionShares: 4
+		Units: 4tnk
+		ValidFactions: soviet, russia, ukraine, belarus
+		Prerequisites: techlevel.high, stek
 	GiveUnitCrateAction@squadlight:
 		SelectionShares: 10
 		Units: e1,e1,e1,e3,e3
