add Engineer Boat
functions like an Engineer at Sea, always externally captures Naval Yard/Submarine Pen, can do goldwrench instant repair friendly Naval Yard/Submarine Pen.

--- a/mods/sovra/rules/structures.yaml
+++ b/mods/sovra/rules/structures.yaml
@@ -307,6 +307,9 @@ SPEN:
 	WithDeathAnimation:
 		DeathSequence: dead
 		UseDeathTypeSuffix: false
+	Capturable:
+		RequiresCondition: !build-incomplete
+		Types: building, naval-building
 
 SYRD:
 	Inherits: ^Building
@@ -463,6 +466,9 @@ SYRD:
 	WithDeathAnimation:
 		DeathSequence: dead
 		UseDeathTypeSuffix: false
+	Capturable:
+		RequiresCondition: !build-incomplete
+		Types: building, naval-building
 
 IRON:
 	Inherits: ^ScienceBuilding
