--- a/mods/sovra/rules/ships.yaml
+++ b/mods/sovra/rules/ships.yaml
@@ -12,7 +12,7 @@ SS:
         BuildDurationModifier: 100
 		Queue: Ship
 		BuildAtProductionType: Submarine
-		BuildPaletteOrder: 40
+		BuildPaletteOrder: 50
 		Prerequisites: ~spen, dome, ~techlevel.medium
 		Description: Submerged anti-ship unit\narmed with torpedoes.\nCan detect other submarines.\n\n  Strong vs Naval units\n  Weak vs Ground units, Aircraft
 	Valued:
@@ -81,7 +81,7 @@ MSUB:
         BuildDurationModifier: 100
 		Queue: Ship
 		BuildAtProductionType: Submarine
-		BuildPaletteOrder: 60
+		BuildPaletteOrder: 70
 		Prerequisites: ~spen, stek, ~techlevel.high
 		Description: Submerged anti-ground siege unit.\nCan detect other submarines.\n\n  Strong vs Buildings, Ground units\n  Weak vs Naval units, Aircraft
 	Valued:
@@ -164,7 +164,7 @@ DD:
 	RevealsShroud@GAPGEN:
 		Range: 4c0
 	Turreted:
-		TurnSpeed: 28
+		TurnSpeed: 24
 		Offset: 469,0,128
 	Armament@PRIMARY:
 		Weapon: Stinger
@@ -205,7 +205,7 @@ CA:
         BuildDurationModifier: 100
 		Queue: Ship
 		BuildAtProductionType: Boat
-		BuildPaletteOrder: 50
+		BuildPaletteOrder: 60
 		Prerequisites: ~syrd, atek, ~techlevel.high
 		Description: Very slow long-range ship.\n\n  Strong vs Buildings, Ground units\n  Weak vs Naval units, Aircraft
 	Valued:
@@ -372,7 +372,7 @@ SEAS:
         BuildDurationModifier: 100
 		Queue: Ship
 		BuildAtProductionType: Submarine
-		BuildPaletteOrder: 20
+		BuildPaletteOrder: 30
 		Prerequisites: ~spen, ~techlevel.low
 		Description: Naval mobile flak unit.\n\n  Strong vs Aircraft, Infantry\n  Weak vs Ships, Vehicles
 	Valued:
@@ -413,3 +413,45 @@ SEAS:
 	WithMuzzleOverlay:
 	Selectable:
 		DecorationBounds: 1036,1036
+
+ENGB:
+	Inherits: ^Ship
+	Buildable:
+        BuildDuration: 500
+        BuildDurationModifier: 100
+		Queue: Ship
+		BuildPaletteOrder: 80
+		Prerequisites: fix, ~techlevel.medium
+		Description: Captures naval structures.\nCan do instant repair.\n\n  Unarmed
+	Valued:
+		Cost: 500
+	Tooltip:
+		Name: Engineer Boat
+	UpdatesPlayerStatistics:
+		AddToArmyValue: true
+	Health:
+		HP: 15000
+	Armor:
+		Type: Heavy
+	Mobile:
+		TurnSpeed: 24
+		Speed: 92
+	RevealsShroud:
+		MinRange: 4c0
+		Range: 5c0
+		RevealGeneratedShroud: False
+	RevealsShroud@GAPGEN:
+		Range: 4c0
+	Selectable:
+		DecorationBounds: 1036,1036
+	InstantlyRepairs:
+	CaptureManager:
+	Captures:
+		CaptureTypes: naval-building
+		PlayerExperience: 25
+		CaptureDelay: 375
+		ConsumedByCapture: False
+		EnterCursor: ability
+		EnterBlockedCursor: move-blocked
+	Voiced:
+		VoiceSet: EngineerVoice
