--- a/mods/sovra/weapons/ballistics.yaml
+++ b/mods/sovra/weapons/ballistics.yaml
@@ -48,6 +48,7 @@
 			Light: 116
 			Heavy: 48
 			Concrete: 32
+			Steel: 30
 	-Warhead@2Smu:
 	Warhead@3Eff: CreateEffect
 		-ImpactSounds:
@@ -59,6 +60,7 @@
 	Warhead@1Dam: SpreadDamage
 		Versus:
 			Heavy: 115
+			Steel: 77
 
 105mm:
 	Inherits: ^Cannon
@@ -67,6 +69,7 @@
 	Warhead@1Dam: SpreadDamage
 		Versus:
 			Heavy: 115
+			Steel: 77
 
 120mm:
 	Inherits: ^Cannon
@@ -78,6 +81,7 @@
 		Damage: 6000
 		Versus:
 			Heavy: 115
+			Steel: 77
 		InvalidTargets: Air
 
 TurretGun:
@@ -109,6 +113,7 @@ TurretGun:
 			Wood: 40
 			Light: 60
 			Heavy: 25
+			Steel: 40
 		DamageTypes: Prone50Percent, TriggerProne, SmallExplosionDeath
 	Warhead@3Eff: CreateEffect
 		Explosions: artillery_explosion
@@ -151,6 +156,7 @@ TurretGun:
 			Light: 60
 			Heavy: 25
 			Concrete: 100
+			Steel: 40
 	Warhead@4EffWater: CreateEffect
 		Explosions: large_splash
 
@@ -168,6 +174,7 @@ TurretGun:
 			Wood: 72
 			Light: 72
 			Concrete: 48
+			Steel: 105
 
 Grenade:
 	Inherits: ^Artillery
@@ -187,6 +194,7 @@ Grenade:
 			Light: 25
 			Heavy: 25
 			Concrete: 100
+			Steel: 25
 	Warhead@3Eff: CreateEffect
 		Explosions: med_explosion
 		ImpactSounds: kaboom25.aud
@@ -209,6 +217,7 @@ DepthCharge:
 		ValidTargets: Submarine
 		Versus:
 			Light: 100
+			Steel: 100
 		DamageTypes: ExplosionDeath
 	Warhead@3Eff: CreateEffect
 		Explosions: med_explosion
@@ -252,6 +261,7 @@ GrenadeLauncher:
 			Light: 25
 			Heavy: 25
 			Concrete: 100
+            Steel: 25
 	Warhead@2Smu: LeaveSmudge
 		SmudgeType: Crater
 		ValidTargets: Ground, Infantry
@@ -311,3 +321,4 @@ SABOT:
 		Versus:
 			Wood: 50
 			Heavy: 115
+			Steel: 115
