--- a/mods/sovra/rules/structures.yaml
+++ b/mods/sovra/rules/structures.yaml
@@ -664,7 +664,7 @@ TSLA:
 	Health:
 		HP: 40000
 	Armor:
-		Type: Heavy
+		Type: Concrete
 	RevealsShroud:
 		MinRange: 6c0
 		Range: 7c0
@@ -714,7 +714,7 @@ AGUN:
 	Health:
 		HP: 40000
 	Armor:
-		Type: Heavy
+		Type: Concrete
 	RevealsShroud:
 		MinRange: 5c0
 		Range: 6c0
@@ -826,7 +826,7 @@ PBOX:
 	Health:
 		HP: 40000
 	Armor:
-		Type: Heavy
+		Type: Concrete
 	RevealsShroud:
 		MinRange: 5c0
 		Range: 6c0
@@ -892,7 +892,7 @@ HBOX:
 	Health:
 		HP: 40000
 	Armor:
-		Type: Heavy
+		Type: Concrete
 	RevealsShroud:
 		MinRange: 5c0
 		Range: 6c0
@@ -960,7 +960,7 @@ GUN:
 	Health:
 		HP: 40000
 	Armor:
-		Type: Heavy
+		Type: Concrete
 	RevealsShroud:
 		MinRange: 5c0
 		Range: 6c512
@@ -1034,7 +1034,7 @@ FTUR:
 	Health:
 		HP: 40000
 	Armor:
-		Type: Heavy
+		Type: Concrete
 	RevealsShroud:
 		MinRange: 5c0
 		Range: 6c0
@@ -1099,7 +1099,7 @@ SAM:
 	Health:
 		HP: 40000
 	Armor:
-		Type: Heavy
+		Type: Concrete
 	RevealsShroud:
 		MinRange: 5c0
 		Range: 8c0
